[project]
name = "etools"
version = "12"
description = "Default template for PDM package"

authors = [
    {name = "Robert Avram", email = "robert@ravdev.com"},
    {name = "Nikola Trncic", email = "ntrncic@unicef.org"},
]

dependencies = [
    "azure-common",
    "azure-storage-blob",
    "azure-storage-common",
    "carto",
    "celery",
    "cryptography",
    "dj-database-url",
    "dj-static",
    "Django==4.2.3",
    "django-admin-extra-urls",
    "django-appconf",
    "django-celery-beat",
    "django-celery-email",
    "django-celery-results",
    "django-contrib-comments",
    "django-cors-headers",
    "django-debug-toolbar",
    "django-extensions",
    "django-easy-pdf3",
    "django-filter",
    "django-fsm",
    "django-import-export",
    "django-js-asset",
    "django-leaflet",
    "django-logentry-admin",
    "django-model-utils",
    "django-ordered-model",
    "django-post-office",
    "django-redis-cache",
    "django-rest-swagger",
    "django-storages[azure]==1.13.2",
    "django-tenants",
    "django-timezone-field",
    "django-waffle",
    "djangorestframework-csv",
    "djangorestframework-gis",
    "djangorestframework-simplejwt",
    "djangorestframework-recursive",
    "djangorestframework-xml",
    "djangorestframework",
    "drf-nested-routers",
    "drf-querystringfilter",
    "etools-validator",
    "etools-offline",
    "flower",
    "gunicorn",
    "newrelic",
    "openpyxl",
    "pyyaml",
    "Pillow",
    "psycopg2-binary",
    "reportlab",
    "sentry-sdk",
    "requests",
    "social-auth-app-django",
    "social-auth-core[azuread]==4.5.4",
    "tenant-schemas-celery",
    "unicef-attachments @ git+https://github.com/unicef/unicef-attachments.git@b720a3ef26e3320a559f72ed1918c798dd2d7b67",
    "unicef-djangolib",
    "unicef-locations",
    "unicef-notification",
    "unicef-restlib",
    "unicef-snapshot",
    "unicef-rest-export",
    "unicef-vision",
    "msal",
    "gdal==3.8.5",
    "jsonschema>=4.22.0",
    "setuptools>=70.1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "flake8",
    "coverage",
    "mock",
    "freezegun",
    "responses",
    "isort",
    "ipython",
    "pdbpp",
    "tox",
    "factory-boy",
    "sphinx",
    "vcrpy",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
